--- a/NEW KicksNation-Ecommerce-Website-master/adminpages/adminhomepage.html
+++ b/NEW KicksNation-Ecommerce-Website-master/adminpages/adminhomepage.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KicksNation Admin</title>
+    <title>JeyteeLogos Admin</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!--link to connect to font awesome 4 to use different icons, just type font awesome 4 cdn and click on first link and copy the url and past it here with rel="stylesheet"-->       
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
@@ -19,8 +19,7 @@
           <!--making navigation bar consist of logo and menu links-->
           <div class="navbar">
             <div class="logo">
-                <a href="../userhomepage/index.html"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                <a href="../userhomepage/index.html"><img src="../images/Logo/Jeyteeslogo.png" alt="JeyteeLogo logo" width=125px></a>
             </div>
             <!--menu-->
             <nav>         
