--- a/NEW KicksNation-Ecommerce-Website-master/authenticationpage/Authentication.html
+++ b/NEW KicksNation-Ecommerce-Website-master/authenticationpage/Authentication.html
@@ -19,14 +19,13 @@
                   <!--making navigation bar consist of logo and menu links-->
                   <div class="navbar">
                       <div class="logo">
-                          <a id="homelogo"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                          <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                          <a id="homelogo"><img src="../images/Logo/Jeyteeslogo.png" alt="JeyteeLogo logo" width=125px></a>
                       </div>
                       <!--menu-->
                       <nav>         
                           <ul id="MenuItems"><!--the call of these id in ui.js at managementjavascript-->                  
                               <li><a id="homepageurl"><i class="fa fa-fw fa-home"></i> Home</a></li>
-                              <li><a id="productsurl"><i class="fi fi-ss-hiking-boot"></i>  Products</a></li>
+                              <li><a id="productsurl"><i class="fi fi-ss-tshirt"></i>  Products</a></li>
                               <li><a id="aboutusurl"><i class="fa fa-fw fa-envelope"></i> About</a></li>
                               <li><a id="contactusurl"> <i class="fi fi-ss-bubble-discussion"></i>  Contact</a></li>
                       </nav><!--this is the menu icon which will be displayed on smaller screens with 3 lines, and when we click on it, it will open upside down or like dropdown menu, in js-->
@@ -38,7 +37,6 @@
       <div class="container">
             <div class="row">
                 <div class="col-2"><!--1 column for image and other for form-->
-                    <img src="../images/image1.png">
                 </div>
                 
                 <div class="col-2">
