--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/Products.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/Products.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--we have added this view port tag and set initial scale to 1 so that our side shoudl be adjustable according to different devices especially for mobile devices-->
-      <title>KicksNation Products </title>
+      <title>JeyTees Products </title>
       <link rel="stylesheet" href="../CSS/style.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!--link to connect to font awesome 4 to use different icons, just type font awesome 4 cdn and click on first link and copy the url and past it here with rel="stylesheet"-->       
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -23,14 +23,13 @@
             <!--making navigation bar consist of logo and menu links-->
             <div class="navbar">
                 <div class="logo">
-                    <a id="homelogo"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                    <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                    <a id="homelogo"><img src="../images/Logo/Jeyteeslogo.png" alt="KicksNation logo" width=125px></a>
                 </div>
                 <!--menu-->
                 <nav>         
                     <ul id="MenuItems"><!--the call of these id in ui.js at managementjavascript-->                  
                         <li><a id="homepageurl"><i class="fa fa-fw fa-home"></i> Home</a></li>
-                        <li><a id="productsurl"><i class="fi fi-ss-hiking-boot"></i>  Products</a></li>
+                        <li><a id="productsurl"><i class="fi fi-ss-tshirt"></i>  Products</a></li>
                         <li><a id="aboutusurl"><i class="fa fa-fw fa-envelope"></i> About</a></li>
                         <li><a id="contactusurl"> <i class="fi fi-ss-bubble-discussion"></i>  Contact</a></li>
                         <li><a id="accounturl"><i class="fi fi-rr-circle-user"></i> Account</a></li>
@@ -44,20 +43,20 @@
             <button id="logout-btn" style="display: none;">Logout</button>
       </div>
       <div>
-        <h1 class = "centertext"> Explore our Products! </p>
+        <h1 class = "centertext" style="color: orange;"> Explore our Products! </p>
      </div>
      <!--offer-->
     <div class="offer">
         <div class="exlusivecontainer">
             <div class="rowexlusives">
                 <div class="group2">
-                   <img src="../images/Exclusives/Kyrie 2 Basketball Shoe.jpg" class="offer-img"> 
+                   <img src="../images/Exclusives/tshirt.jpg" class="offer-img"> 
                 </div>
                 <div class="group2">
-                    <p>Exclusively available on Nike</p>
-                    <h1>Kyrie 2 Basketball Shoe</h1>
+                    <p>Exclusively available on Adidas</p>
+                    <h1>Adidas T-Shirts</h1>
                     <small>
-                        Kyrie All Star Basketball Shoes 2 Red version from Nike 
+                        Premium quality T-shirts designed for comfort, performance, and style.
                     </small>
                     <a class="btn" id="btnNike">Buy Now &#8594;</a>
                 </div>
@@ -130,8 +129,7 @@
                 </div>
 
                 <div class="footer-col-2">
-                    <img src="../Images/logo-white.png">
-                    <p>Our purpose is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                    <p>Our purpose is to Make Stylish and Comfortable T-Shirts Accessible to Everyone.</p>
                 </div>
 
                 <div class="footer-col-3">
@@ -158,7 +156,7 @@
             </div>
             <!--add horizontal line and copyright text along with clickable link-->
             <hr>
-            <a href="" class="copyright">Made with our fellow group members : Lusam Delictor, Kenneth Arante , Joshua Moril, Merylle Jane P. Abucay</a>
+            <a href="" class="copyright">Made with by : Jeyvee Amores</a>
         </div>
     </div>         
     </body>
