--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/contact.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/contact.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us | KicksNation</title>
+  <title>Contact Us | Jeytees</title>
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -21,12 +21,12 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a id="homelogo"><img src="../images/logo.png" alt="KicksNation logo" width="125px"></a>
+          <a id="homelogo"><img src="../images/Logo/Jeyteeslogo.png" alt="KicksNation logo" width="125px"></a>
         </div>
         <nav>
           <ul id="MenuItems">
             <li><a id="homepageurl"><i class="fa fa-fw fa-home"></i> Home</a></li>
-            <li><a id="productsurl"><i class="fi fi-ss-hiking-boot"></i> Products</a></li>
+            <li><a id="productsurl"><i class="fi fi-ss-tshirt"></i> Products</a></li>
             <li><a id="aboutusurl"><i class="fa fa-fw fa-envelope"></i> About</a></li>
             <li><a id="contactusurl" class="active"> <i class="fi fi-ss-bubble-discussion"></i> Contact</a></li>
             <li><a id="accounturl"><i class="fi fi-rr-circle-user"></i> Account</a></li>
@@ -102,7 +102,6 @@
       </div>
     </div>
     <div class="footer-col-2">
-      <img src="../images/logo.png">
       <p>Follow us on social media.</p>
     </div>
     <div class="footer-col-3">
@@ -125,7 +124,7 @@
     </div>
   </div>
   <hr>
-  <p class="copyright"> 2024 KicksNation. All Rights Reserved.</p>
+  <p class="copyright"> 2024 JeyTees. All Rights Reserved.</p>
 </div>
 </div>
 </body>
