--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/product-detail.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/product-detail.html
@@ -25,14 +25,13 @@
                 <!--making navigation bar consist of logo and menu links-->
                 <div class="navbar">
                     <div class="logo">
-                        <a id="homelogo"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                        <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                        <a id="homelogo"><img src="../images/Logo/Jeyteeslogo.png" alt="JeyteeLogo logo" width=125px></a>
                     </div>
                     <!--menu-->
                     <nav>         
                         <ul id="MenuItems"><!--the call of these id in ui.js at managementjavascript-->                  
                             <li><a id="homepageurl"><i class="fa fa-fw fa-home"></i> Home</a></li>
-                            <li><a id="productsurl"><i class="fi fi-ss-hiking-boot"></i>  Products</a></li>
+                            <li><a id="productsurl"><i class="fi fi-ss-tshirt"></i>  Products</a></li>
                             <li><a id="aboutusurl"><i class="fa fa-fw fa-envelope"></i> About</a></li>
                             <li><a id="contactusurl"> <i class="fi fi-ss-bubble-discussion"></i>  Contact</a></li>
                             <li><a id="accounturl"><i class="fi fi-rr-circle-user"></i> Account</a></li>
@@ -72,15 +71,10 @@
                     <!--sizes selection-->
                     <select id="select">
                         <option>Select Size</option>
-                        <option value="36">36</option>
-                        <option value="38">38</option>
-                        <option value="40">40</option>
-                        <option value="42">42</option>
-                        <option value="44">44</option>
-                        <option value="46">46</option>
-                        <option value="48">48</option>
-                        <option value="50">50</option>
-                        <option value="52">52</option>
+                        <option value="Small">Small</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Large">Large</option>
+                        <option value="Extra Large">Extra Large</option>
                     </select>
                     
                     <!--no of products-->
@@ -134,10 +128,8 @@
                 </div>
 
                 <div class="footer-col-2">
-                    <img src="../images/logo-white.png">
-                    <p>Our purpose is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                    <p>Our purpose is to Make Stylish and Comfortable T-Shirts Accessible to Everyone.</p>
                 </div>
-
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
                     <ul>
@@ -162,8 +154,7 @@
             </div>
             <!--add horizontal line and copyright text along with clickable link-->
             <hr>
-            <a href="" class="copyright">Made with our fellow group members : Lusam Delictor, Kenneth Arante , Joshua Moril, Merylle Jane P. Abucay</a>
-        </div>
+            <a href="" class="copyright">Made with by : Jeyvee Amores</a></div>
     </div>         
     </body>
 
