--- a/NEW KicksNation-Ecommerce-Website-master/adminpages/viewproducts.html
+++ b/NEW KicksNation-Ecommerce-Website-master/adminpages/viewproducts.html
@@ -19,8 +19,7 @@
           <!--making navigation bar consist of logo and menu links-->
           <div class="navbar">
             <div class="logo">
-                <a href="../userhomepage/index.html"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                <a href="../userhomepage/index.html"><img src="../images/Logo/Jeyteeslogo.png" alt="JeyteeLogo logo" width=125px></a>
             </div>
             <!--menu-->
             <nav>         
