--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/about.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/about.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--we have added this view port tag and set initial scale to 1 so that our side shoudl be adjustable according to different devices especially for mobile devices-->
-      <title>About KicksNation </title>
+      <title>About JeyTees </title>
       <link rel="stylesheet" href="../CSS/style.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!--link to connect to font awesome 4 to use different icons, just type font awesome 4 cdn and click on first link and copy the url and past it here with rel="stylesheet"-->       
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,14 +25,13 @@
           <!--making navigation bar consist of logo and menu links-->
           <div class="navbar">
               <div class="logo">
-                <a id="homelogo"><img src="../images/Logo/KicksNation NoText Logo-min.png" alt="KicksNation logo" width=125px></a>
-                  <img class="logotext" src="../images/Logo/logoletters1.png" alt="KicksNation logo" width="170px">
+                <a id="homelogo"><img src="../images/Logo/Jeyteeslogo.png" alt="KicksNation logo" width=125px></a>
               </div>
               <!--menu-->
               <nav>         
                   <ul id="MenuItems"><!--the call of these id in ui.js at managementjavascript-->                  
                       <li><a id="homepageurl"><i class="fa fa-fw fa-home"></i> Home</a></li>
-                      <li><a id="productsurl"><i class="fi fi-ss-hiking-boot"></i>  Products</a></li>
+                      <li><a id="productsurl"><i class="fi fi-ss-tshirt"></i>  Products</a></li>
                       <li><a id="aboutusurl"><i class="fa fa-fw fa-envelope"></i> About</a></li>
                       <li><a id="contactusurl"> <i class="fi fi-ss-bubble-discussion"></i>  Contact</a></li>
                       <li><a id="accounturl"><i class="fi fi-rr-circle-user"></i> Account</a></li>
@@ -47,31 +46,31 @@
          </div>
          <section class="about-section">
             <div class="container">
-              <h1>About KicksNation</h1>
-              <p>Welcome to KicksNation, your premier destination for authentic sneakers and streetwear. Founded in 2010, our mission is to provide top-quality products and exceptional customer service.</p>
+              <h1>About JeyTees</h1>
+              <p>Welcome to Jeytees, your premier destination for stylish and comfortable T-shirts. Founded in 2010, our mission is to provide high-quality products and exceptional customer service.</p>
           
               <!-- Our Story -->
               <div class="row">
                 <div class="col-md-6">
                   <h2>Our Story</h2>
-                  <p>KicksNation was born out of passion for sneakers and street culture. Our team travels the globe to curate exclusive collections, collaborating with renowned brands and emerging designers.</p>
-                  <img src="../images/about-story.jpg" alt="Our Story">
+                  <p>Jeytees was born out of a passion for fashion and personal expression. Our team curates exclusive collections, collaborating with renowned designers and emerging talent to bring you the best in T-shirt design.</p>
                 </div>
                 <div class="col-md-6">
-                  <h2>Mission & Values</h2>
+               <h2>Mission & Values</h2>
                   <ul>
-                    <li>Authenticity: Guaranteed genuine products</li>
-                    <li>Quality: Uncompromising standards</li>
-                    <li>Customer Satisfaction: Dedicated support</li>
-                    <li>Community Engagement: Sneakerhead events and contests</li>
+                    <li>Authenticity: Genuine designs and premium materials</li>
+                    <li>Quality: Uncompromising standards in every T-shirt</li>
+                    <li>Customer Satisfaction: Personalized support and care</li>
+                    <li>Community Engagement: Fashion events and collaborations</li>
                   </ul>
                 </div>
               </div>
+              
               <!-- Featured Brands -->
               <div class="categories">
                 <div class="group1">
                     <h1>Partnered with the best brands</h1>
-                    <p>Offering an exclusive selection from three of the world's most renowned shoe brands: Nike, Adidas and Puma .</p>
+                    <p>Offering an exclusive selection from three of the world’s most renowned T-shirt brands: Adidas, Nike, and Puma.</p>
                     <a href="products.html" class="text" id="productbutton"></a>
                 </div>
           <div class="image-container">
@@ -138,9 +137,8 @@
                   </div>   
               </div>
               <div class="footer-col-2">
-                  <img src="../images/Logo/logoletters1.png">
-                  <p>Our purpose is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
-              </div>
+                <p>Our purpose is to Make Stylish and Comfortable T-Shirts Accessible to Everyone.</p>
+            </div>
 
               <div class="footer-col-3">
                   <h3>Useful Links</h3>
@@ -163,7 +161,7 @@
           </div>
           <!--add horizontal line and copyright text along with clickable link-->
           <hr>
-          <a href=""class="copyright"> Made with our fellow group members : Lusam Delictor, Kenneth Arante , Joshua Moril, and Merylle Jane P. Abucay</a>
+          <a href="" class="copyright">Made with by : Jeyvee Amores</a>
       </div>
   </div>         
 </body>   
