--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/index.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <!--HOMEPAGE-->
     <head>
-        <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
+        <link rel="icon" type="image/x-icon" href="../images/Logo/Jeyteeslogo.png"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--we have added this view port tag and set initial scale to 1 so that our side shoudl be adjustable according to different devices especially for mobile devices-->
         <title>JeyTees Number 1 WorldWide! </title>
@@ -54,7 +54,7 @@
                       <h1 style="color: orangered;">Welcome to JeyTees</h1>
                       <p style="color: black;">Discover Premium T-Shirts and Trendy Apparel from Exclusive JeyTees Collections.</p>
                       <br>
-                      <a class="shop-now-btn" id="shopbutton">Shop Now</a>
+                      <a class="shop-now-btn" id="shopbutton" href="products.html">Shop Now</a>
                     </div>
                     <!-- Hero section dots -->
                     <div class="hero-dots">
@@ -122,7 +122,7 @@
                 to express yourself is our real mission
                 to craft your perfect fit is our cause
                 Jeytees!</p>
-            <a  class="btn" id="productbutton">Explore Now &#8594;</a>
+            <a  class="btn" id="productbutton" href="Products.html">Explore Now &#8594;</a>
         </div>
     
     </div>
@@ -138,7 +138,7 @@
                     </p><br>
                     <p style="color: black;">Learn more about Jeytees</p>
                     <!-- Learn More button -->
-                <a class="btn" id="aboutbutton">About us→</a>
+                <a class="btn" id="aboutbutton" href="about.html">About us→</a>
                 </div>
                 <!--2nd for image-->
                 <div class="group1">
