--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/about.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/about.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
+    <link rel="icon" type="image/x-icon" href="../images/Logo/Jeyteeslogo.png"/>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--we have added this view port tag and set initial scale to 1 so that our side shoudl be adjustable according to different devices especially for mobile devices-->
       <title>About JeyTees </title>
