--- a/NEW KicksNation-Ecommerce-Website-master/userhomepage/contact.html
+++ b/NEW KicksNation-Ecommerce-Website-master/userhomepage/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/9tQ3krq/Kicks-Nation-Ecommerce-logo.png"/>
+    <link rel="icon" type="image/x-icon" href="../images/Logo/Jeyteeslogo.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Jeytees</title>
